# knack

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  bench_report.sh  bench_status.sh  env.sh  install.sh  kafka-client.env  knack  nats-client.env  pyproject.toml  rerun_prodcon.sh  run_all.sh  run_scenarios.sh
bench/: aggregate_results.py  consumer_kafka.py  consumer_nats.py  export_errors.py  latency_common.py  latency_kafka.py  latency_nats.py  nats_async_publish.py  prodcon_kafka.py  prodcon_nats.py  producer_kafka.py  producer_nats.py  visualize.py
infra/: docker-compose.kafka.yml  docker-compose.monitoring.yml  docker-compose.nats.yml  nats-entrypoint.sh  nats-server.conf  prometheus.yml
sample-report/: benchmark_report.md
sample-report/large/: benchmark_report.md
sample-report/medium/: benchmark_report.md
sample-report/small/: benchmark_report.md
scripts/: _log.sh  bench_cli_throughput.sh  bench_consumer.sh  bench_idle.sh  bench_latency.sh  bench_memory_stress.sh  bench_prodcon.sh  bench_resource_scaling.sh  bench_startup.sh  bench_throughput.sh  metrics_collector.sh
